--- a/Exercicios refatorados(PGO)/packages.config
+++ b/Exercicios refatorados(PGO)/packages.config
@@ -1,5 +1,23 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="DotNetSeleniumExtras.PageObjects" version="3.11.0" targetFramework="net461" />
+  <package id="DotNetSeleniumExtras.PageObjects.Core" version="3.12.0" targetFramework="net461" />
+  <package id="DotNetSeleniumExtras.WaitHelpers" version="3.11.0" targetFramework="net461" />
   <package id="MSTest.TestAdapter" version="1.3.2" targetFramework="net461" />
   <package id="MSTest.TestFramework" version="1.3.2" targetFramework="net461" />
+  <package id="NUnit" version="3.12.0" targetFramework="net461" />
+  <package id="NUnit.Console" version="3.10.0" targetFramework="net461" />
+  <package id="NUnit.ConsoleRunner" version="3.10.0" targetFramework="net461" />
+  <package id="NUnit.Extension.NUnitProjectLoader" version="3.6.0" targetFramework="net461" />
+  <package id="NUnit.Extension.NUnitV2Driver" version="3.7.0" targetFramework="net461" />
+  <package id="NUnit.Extension.NUnitV2ResultWriter" version="3.6.0" targetFramework="net461" />
+  <package id="NUnit.Extension.TeamCityEventListener" version="1.0.6" targetFramework="net461" />
+  <package id="NUnit.Extension.VSProjectLoader" version="3.8.0" targetFramework="net461" />
+  <package id="NUnit3TestAdapter" version="3.16.0" targetFramework="net461" developmentDependency="true" />
+  <package id="Selenium.Chrome.WebDriver" version="79.0.0" targetFramework="net461" />
+  <package id="Selenium.Firefox.WebDriver" version="0.26.0" targetFramework="net461" />
+  <package id="Selenium.Support" version="3.141.0" targetFramework="net461" />
+  <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net461" />
+  <package id="Selenium.WebDriver.Extensions" version="3.3.0" targetFramework="net461" />
+  <package id="Selenium.WebDriver.MicrosoftWebDriver" version="10.0.17134" targetFramework="net461" />
 </packages>
